index,skill.htmlを修正

--- a/index.html
+++ b/index.html
@@ -12,20 +12,9 @@
 
     <body>
     <div id="home">
-        <header class="page-header wrapper"> <!-- classはスペースを入れることで複数持つことが可能-->
-            <h1><a href="index.html"><img class="logo" src="images/test.jpg" alt="test1"></a></h1>
-            <nav>
-                <ul class="main-nav">
-                    <li><a href="news.html">Skill</a></li>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
-
         <div class="home-content wrapper">
             <h2 class="page-title">Ryo Kitagawa's PortFolio!</h2>
-            <p>はじめてまして、北川と申します。私のスキルや制作物についてご紹介させていただきます。</p>
+            <p>はじめてまして、北川と申します。私のスキルについてご紹介させていただきます。</p>
             <a class="button" href="skill.html"> スキルを見る</a>
         </div>
     </div>
