--- a/skill.html
+++ b/skill.html
@@ -12,17 +12,6 @@
 
     <body>
     <div id="skill" class="big-bg">
-        <header class="page-header wrapper"> <!-- classはスペースを入れることで複数持つことが可能-->
-            <h1><a href="index.html"><img class="logo" src="images/test.jpg" alt="test1"></a></h1>
-            <nav>
-                <ul class="main-nav">
-                    <li><a href="index.html">TOP</a></li>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
-
         <div class="skill-content wrapper">
             <h2 class="page-title">skill</h2>
             <p>実務およびセルフラーニングで得た知識について記載いたします。</p>
@@ -40,7 +29,8 @@
             </p>
         </div>
         <div class="item">
-            <p>Mercurialを使用していました。簡単な操作は理解しています。pullやpushなど</p>
+            <p>Mercurialを使用していました。基本的な操作は理解しています。<br>
+            また、今はGITを使用できるよう勉強しています。</p>
         </div>
     </div>
     </body>
