htmlおよびCSSファイルの修正、文章の追加

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>フルスクリーンポートフォリオ</title>
+        <title>ポートフォリオ</title>
         <meta name="discription" content="テスト">
 
         <!-- CSS -->
@@ -12,9 +12,21 @@
 
     <body>
     <div id="home">
+        <header class="page-header wrapper">
+            <nav>
+                <ul class="main-nav">
+                    <li><a href="skill.html">Skill</a></li>
+                </ul>
+            </nav>
+        </header>
         <div class="home-content wrapper">
             <h2 class="page-title">Ryo Kitagawa's PortFolio!</h2>
-            <p>はじめてまして、北川と申します。私のスキルについてご紹介させていただきます。</p>
+            <p>はじめまして、北川と申します。約2年の間、IT業界でプログラマーとしてお仕事をしていました。<br>
+                入社してから退職するまでの約2年間は、2次元の矩形などを配置して設備の設計図をウェブブラウザ上で作成できるwebシステムの開発を行っていました。<br>
+                1年目は、左右下にあるパネルを表示・非表示を可能にするようなUIの改善や新規機能の開発を行っていました。<br>
+                また、2年目は、過去に開発した機能で内在していた不具合の修正、既存機能の改修、新機能の一部開発を行っていました。<br>
+                開発フェーズは仕様書の作成、開発、テスト(開発担当者および別メンバーが開発した機能)を行っていました。
+            </p>
             <a class="button" href="skill.html"> スキルを見る</a>
         </div>
     </div>
