--- a/skill.html
+++ b/skill.html
@@ -12,25 +12,33 @@
 
     <body>
     <div id="skill" class="big-bg">
+        <header class="page-header wrapper">
+            <nav>
+                <ul class="main-nav">
+                    <li><a href="index.html">TOP</a></li>
+                </ul>
+            </nav>
+        </header>
         <div class="skill-content wrapper">
             <h2 class="page-title">skill</h2>
-            <p>実務およびセルフラーニングで得た知識について記載いたします。</p>
+            <p>スキルについて記載しています。業務では主にJavaScriptをメインに書いていました。</p>
         </div>
-    </div>
-
-    <div class="wrapper grid">
-        <div class="item">
-            <p>htmlはタグ打ちができる程度です。調べながら作成は可能です。
-                CSSに関しては、グリッドなどは最低限度書籍で勉強した程度しか理解できていません。こちらも調べながら作成可能です。
-            </p>
-        </div>
-        <div class="item">
-            <p>DOM操作については、一通り理解しています。また、letおよびconstについても理解しています。非同期処理に関しては理解できていません。
-            </p>
-        </div>
-        <div class="item">
-            <p>Mercurialを使用していました。基本的な操作は理解しています。<br>
-            また、今はGITを使用できるよう勉強しています。</p>
+        <div class="wrapper grid">
+            <div class="item">
+                <h3 class="grid-title">HTML/CSS</h3>
+                <p>htmlはタグ打ちができる程度です。調べながら作成は可能です。
+                    CSSはFlexboxを用いたレイアウトを少し理解しています。また、html同様調べながら作成可能です。
+                </p>
+            </div>
+            <div class="item">
+                <h3 class="grid-title">JavaScript</h3>
+                <p>DOM操作については、一通り理解しています。また、letおよびconstについても理解しています。非同期処理に関しては理解不足です。</p>
+            </div>
+            <div class="item">
+                <h3 class="gird-title">その他</h3>
+                <p>Mercurialを使用していました。comet,push,mergeは理解しています。<br>
+                TortoiseHGというGUIツールを使用していました。</p>
+            </div>
         </div>
     </div>
     </body>
