タイルの下側に余白をだしていたのでその分白くなっていたのを修正

--- a/skill.html
+++ b/skill.html
@@ -27,8 +27,7 @@
             <div class="item">
                 <h3 class="grid-title">HTML/CSS</h3>
                 <p>htmlはタグ打ちができる程度です。調べながら作成は可能です。
-                    CSSはFlexboxを用いたレイアウトを少し理解しています。また、html同様調べながら作成可能です。
-                </p>
+                CSSはFlexboxを用いたレイアウトを少し理解しています。また、html同様調べながら作成可能です。</p>
             </div>
             <div class="item">
                 <h3 class="grid-title">JavaScript</h3>
