2024年3月までの経歴スキルを記載

--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
         <meta name="discription" content="テスト">
 
         <!-- CSS -->
-        <!--<link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css"> -->
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
     <div id="home">
             <div class="openbtn1">Menu<span></span><span></span><span></span></div>
                 <nav id="g-nav">
-                    <div id="g-nav-list"><!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
+                    <div id="g-nav-list">
                     <ul>
                         <li><a href="#About">About</a></li>  
                         <li><a href="#skill">スキルについて</a></li>  
@@ -30,28 +29,77 @@
     <ul class="accordion-area">
         <li>
             <section>
-                <h3 class="title">2017年10月～2019年8月株式会社フォーラムエイト</h3>
+                <h3 class="title">株式会社フォーラムエイト 2017年10月～2019年8月</h3>
                 <div class="box">
-                    <p>プログラマーとして1つのプロジェクトに携わっていました。<br>
-                        2次元の矩形などを配置して設備の設計図をウェブブラウザ上で作成できるwebシステムの開発を行っていました。<br>
-                        具体的には、ブラウザのキャンバスとWebGLによる2次元のCADのフロントエンドの開発を行っていました。
-                        1年目は、左右下にあるパネルを表示・非表示にする機能を開発して作図領域を広げるためや利便性向上のためのUIの開発や新規機能の開発を行っていました。<br>
-                        2年目は、過去に開発した機能で内在していた不具合の修正、既存機能の改修、新機能の一部開発を行っていました。<br>
-                        開発フェーズは内部設計（顧客の要求定義が記載された資料を基に仕様書の作成）、開発、テスト(開発担当者および別メンバーが開発した機能)を行っていました。
+                    <p>
+                        Webアプリケーション(通信系の業務用の2DCAD)のフロントエンドの開発を行いました。<br>
+                        <br>
+                            言語:HTML,CSS,Javascript<br>
+                            ライブラリ:Three.js<br>
+                            バージョン管理:Mercurial<br>
+                        <br>
+                        経験領域は以下です。<br>
+                        ・お客様の要件定義から基本設計、詳細設計<br>
+                        ・製造<br>
+                        ・テスト仕様書作成（単体テスト、結合テスト）<br>
+                        ・単体テスト、結合テスト<br>
+                        <br>
+                        １年目は、新規機能の開発やUIの改善を主に行いました。<br>
+                        また、２年目は、既存機能の改修、既存機能の不具合の修正を主に行いました。
                     </p>
                 </div>
             </section>
         </li>
         <li>
             <section>
-                <h3 class="title">2021年6月～現在:株式会社ユーコム</h3>
+                <h3 class="title">派遣先：株式会社ユーコム 派遣元：株式会社アウトソーシングテクノロジー 2021年6月～2023年7月</h3>
                 <div class="box">
-                    <p>ヘルプデスクの業務を行っています。<br>
-                        2次元の矩形などを配置して設備の設計図をウェブブラウザ上で作成できるwebシステムの開発を行っていました。<br>
-                        具体的には、ブラウザのキャンバスとWebGLによる2次元のCADのフロントエンドの開発を行っていました。
-                        1年目は、左右下にあるパネルを表示・非表示にする機能を開発して作図領域を広げるためや利便性向上のためのUIの開発や新規機能の開発を行っていました。<br>
-                        2年目は、過去に開発した機能で内在していた不具合の修正、既存機能の改修、新機能の一部開発を行っていました。<br>
-                        開発フェーズは内部設計（顧客の要求定義が記載された資料を基に仕様書の作成）、開発、テスト(開発担当者および別メンバーが開発した機能)を行っていました。
+                    <p>
+                        社外コラボ用のアカウント払い出しシステムのサポート/ヘルプデスク<br>
+                        <br>
+                        主な業務内容<br>
+                        アプリ操作によるアカウントの登録に関わる作業<br>
+                        FAQの作成<br>
+                        QA回答<br>
+                        MFA認証リセット等<br>
+                        <br>
+                        その他業務<br>
+                        メンバーの作業負担および作業分担についての提案<br>
+                        新規メンバーのＱＡ回答のヘルプ<br>
+                        業務の説明、提案等<br>
+                        問題発生時に問題に対してのルールの改善案の提案
+                    </p>
+                </div>
+            </section>
+        </li>
+        <li>
+            <section>
+                <h3 class="title">派遣先：株式会社ユーコム　派遣元：株式会社アウトソーシングテクノロジー 2023年8月～現在</h3>
+                <div class="box">
+                    <p>
+                        intra-martを用いたシステム開発（2023年8月～2024年2月）<br>
+                        ■電子帳簿改修対応<br>
+                        業務内容<br>
+                        ・単体テスト、結合テスト仕様書作成<br>
+                        ・単体テスト、結合テスト<br>
+                        <br>
+                        ■システム開発<br>
+                        言語:HTML,Javascript,SQL<br>
+                        バージョン管理:SubVersion<br>
+                        データベース:PostgreSQL
+                        Webサーバー：Resin<br>  
+                        <br>
+                        経験領域は以下です。<br>
+                        ・製造<br>
+                        ・テスト仕様書作成（単体テスト、結合テスト）<br>
+                        ・単体テスト、結合テスト<br>
+                        <br>
+                        intra-martを用いたWebアプリケーションの開発を行いました。<br>
+                        <br>
+                        ■マニュアル作成(2024年2月)<br>
+                        <br>
+                        ■システム開発(2024年3月)<br>
+                        新規システムの画面設計
                     </p>
                 </div>
             </section>
@@ -66,19 +114,18 @@
         <div class="wrapper grid">
             <div class="item">
                 <h3 class="grid-title">HTML/CSS</h3>
-                <p>htmlはタグ打ちができる程度です。調べながら作成は可能です。
-                CSSはFlexboxを用いたレイアウトを少し理解しています。また、html同様調べながら作成可能です。</p>
+                <p>調べながら書くことができます。</p>
             </div>
             <div class="item">
                 <h3 class="grid-title">JavaScript</h3>
                 <p>DOM操作については、一通り理解しています。<br>
-                    当サイトのアコーディオンおよびMenuはJavascriptで実装しています。（jquery未使用)
+                    当サイトのアコーディオンおよびMenuはJavascriptで実装しています。(jquery未使用)
                     また、EcmaScript2015について、非同期処理以外は理解しています。</p>
             </div>
             <div class="item">
                 <h3 class="gird-title">その他</h3>
-                <p>Mercurialを使用していました。comet,push,mergeは理解しています。<br>
-                TortoiseHGというGUIツールを使用していました。</p>
+                <p>バージョン管理はMercurial、SubVersionを使用していました。comet,push,mergeは理解しています。<br>
+                MercurialはTortoiseHGというGUIツールを使用していました。</p>
             </div>
         </div>
     </div>
