スキルをカードに、フォントを変更

--- a/index.html
+++ b/index.html
@@ -107,28 +107,29 @@
     </ul>
         </div>
     </div>
-    <div id="skill">
-        <div class="skill-content wrapper">
-            <h2 class="page-title">スキルについて</h2>
-        </div>
-        <div class="wrapper grid">
-            <div class="item">
-                <h3 class="grid-title">HTML/CSS</h3>
-                <p>調べながら書くことができます。</p>
+    <section>
+        <div id="skill">
+            <div class="skill-content wrapper">
+                <h2 class="page-title">スキルについて</h2>
             </div>
-            <div class="item">
-                <h3 class="grid-title">JavaScript</h3>
-                <p>DOM操作については、一通り理解しています。<br>
-                    当サイトのアコーディオンおよびMenuはJavascriptで実装しています。(jquery未使用)
-                    また、EcmaScript2015について、非同期処理以外は理解しています。</p>
+            <div class="wrapper grid">
+                <div class="grid-item">
+                    <h3 class="grid-title">HTML/CSS</h3>
+                    <p>flex,grid勉強中</p>
+                </div>
+                <div class="grid-item">
+                    <h3 class="grid-title">JavaScript</h3>
+                    <p>基本的なことは理解しています。
+                    </p>
+                </div>
+                <div class="grid-item">
+                    <h3 class="grid-title">その他</h3>
+                    <p>バージョン管理はMercurial、SubVersionを使用していました。<br>
+                    MercurialはTortoiseHGというGUIツールを使用していました。</p>
+                </div>
             </div>
-            <div class="item">
-                <h3 class="gird-title">その他</h3>
-                <p>バージョン管理はMercurial、SubVersionを使用していました。comet,push,mergeは理解しています。<br>
-                MercurialはTortoiseHGというGUIツールを使用していました。</p>
-            </div>
-        </div>
-    </div>
+        </div>    
+    </section>
         <script src="js/globalNavigation.js"></script>
         <script src="js/accordion.js"></script>
     </body>
