経歴の追加 descriptionのスペルミスとcontentを追加

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>ポートフォリオ</title>
-        <meta name="discription" content="テスト">
+        <meta name="description" content="北川 諒のポートフォリオサイトです。Webフロントエンド開発を中心に、これまでの実績やスキルをご紹介しています。Web技術を通じて貢献したいと考えています。">
 
         <!-- CSS -->
         <link href="css/style.css" rel="stylesheet">
@@ -44,8 +44,8 @@
                         ・テスト仕様書作成（単体テスト、結合テスト）<br>
                         ・単体テスト、結合テスト<br>
                         <br>
-                        １年目は、新規機能の開発やUIの改善を主に行いました。<br>
-                        また、２年目は、既存機能の改修、既存機能の不具合の修正を主に行いました。
+                        1年目は、新規機能の開発やUIの改善を主に行いました。<br>
+                        また、2年目は、既存機能の改修、既存機能の不具合の修正を主に行いました。
                     </p>
                 </div>
             </section>
@@ -74,7 +74,7 @@
         </li>
         <li>
             <section>
-                <h3 class="title">派遣先：株式会社ユーコム　派遣元：株式会社アウトソーシングテクノロジー 2023年8月～現在</h3>
+                <h3 class="title">派遣先：株式会社ユーコム 派遣元：株式会社アウトソーシングテクノロジー 2023年8月～2024年3月</h3>
                 <div class="box">
                     <p>
                         intra-martを用いたシステム開発（2023年8月～2024年2月）<br>
@@ -100,6 +100,40 @@
                         <br>
                         ■システム開発(2024年3月)<br>
                         新規システムの画面設計
+                    </p>
+                </div>
+            </section>
+        </li>
+        <li>
+            <section>
+                <h3 class="title">派遣先：株式会社電陽社 派遣元：株式会社アウトソーシングテクノロジー 2024年4月～2025年3月</h3>
+                <div class="box">
+                    <p>
+                        ■業務内容（ヘルプデスク等）
+                        Windows11マスターPC作成対応(PCキッティング作業)<br>
+                        他部署の社員の社内PCリプレイス作業<br>
+                        （旧端末のデータを新端末に移行する作業。メール、社内標準アプリの設定など）<br>
+                        PCトラブル対応<br>
+                        ソフトウェアインストール対応（リモートデスクトップ接続を利用）<br>
+                        ■業務内容（開発）
+                        業務用Excelマクロ改修対応<br>
+                        VBSおよびVBAを使った自動メール送信対応<br>
+                        マスタPC作成手順、PCリプレイス手順、ソフトウェアインストール対応等の作業のマニュアル化<br>
+                    </p>
+                </div>
+            </section>
+        </li>
+        <li>
+            <section>
+                <h3 class="title">派遣先：成和システムエンジニアリング 派遣元：株式会社アウトソーシングテクノロジー 2023年8月～現在</h3>
+                <div class="box">
+                    <p>
+                        金融系伝送システム案件<br>
+                        基本設計書作成 <br>
+                        ・画面<br>
+                        ・帳票<br> 
+                        ・画面遷移<br>
+                        ・運用<br>
                     </p>
                 </div>
             </section>
