レスポンシブデザインに対応 アコーディオンの動作について、一か所だけ開くように対応 開閉時に滑らかに動くように対応

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <body>
     <div id="home">
             <div class="openbtn1">Menu<span></span><span></span><span></span></div>
-                <nav id="g-nav">
-                    <div id="g-nav-list">
-                    <ul>
-                        <li><a href="#About">About</a></li>  
-                        <li><a href="#skill">スキルについて</a></li>  
-                    </ul>
-                    </div>
-                </nav>
+            <nav id="g-nav" class="main-nav">
+                <div id="g-nav-list">
+                  <ul>
+                    <li><a href="#About">経歴</a></li>  
+                    <li><a href="#skill">スキルについて</a></li>  
+                  </ul>
+                </div>
+            </nav>
         <div class="home-content wrapper">
             <h2 class="page-title">Ryo Kitagawa's PortFolio!</h2>
         </div>
@@ -148,19 +148,30 @@
             </div>
             <div class="wrapper grid">
                 <div class="grid-item">
-                    <h3 class="grid-title">HTML/CSS</h3>
-                    <p>flex,grid勉強中</p>
-                </div>
-                <div class="grid-item">
-                    <h3 class="grid-title">JavaScript</h3>
-                    <p>基本的なことは理解しています。
+                    <h3 class="grid-title">HTML / CSS</h3>
+                    <p>
+                      ・Flexbox / Grid<br>
                     </p>
-                </div>
-                <div class="grid-item">
-                    <h3 class="grid-title">その他</h3>
-                    <p>バージョン管理はMercurial、SubVersionを使用していました。<br>
-                    MercurialはTortoiseHGというGUIツールを使用していました。</p>
-                </div>
+                  </div>                  
+                  <div class="grid-item">
+                    <h3 class="grid-title">JavaScript</h3>
+                    <p>
+                      ・DOM操作 / イベントハンドラ<br>
+                      ・非同期処理（fetch, Promise）<br>
+                      ・ライブラリ使用経験: Three.js
+                    </p>
+                  </div>                 
+                  <div class="grid-item">
+                    <h3 class="grid-title">開発環境 / その他</h3>
+                    <p>
+                      ・Mercurial / Subversion<br>
+                      （GUI：TortoiseHG）<br>
+                      ・intra-mart経験あり（業務アプリ開発）<br>
+                      ・VBA / VBS による業務自動化<br>
+                      ・基本設計（機能設計）
+                    </p>
+                  </div>
+                  
             </div>
         </div>    
     </section>
