--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </li>
         <li>
             <section>
-                <h3 class="title">派遣先：株式会社ユーコム 派遣元：株式会社アウトソーシングテクノロジー 2021年6月～2023年7月</h3>
+                <h3 class="title">株式会社アウトソーシングテクノロジー 2021年6月～2023年7月</h3>
                 <div class="box">
                     <p>
                         社外コラボ用のアカウント払い出しシステムのサポート/ヘルプデスク<br>
@@ -74,7 +74,7 @@
         </li>
         <li>
             <section>
-                <h3 class="title">派遣先：株式会社ユーコム 派遣元：株式会社アウトソーシングテクノロジー 2023年8月～2024年3月</h3>
+                <h3 class="title">株式会社アウトソーシングテクノロジー 2023年8月～2024年3月</h3>
                 <div class="box">
                     <p>
                         intra-martを用いたシステム開発（2023年8月～2024年2月）<br>
@@ -106,7 +106,7 @@
         </li>
         <li>
             <section>
-                <h3 class="title">派遣先：株式会社電陽社 派遣元：株式会社アウトソーシングテクノロジー 2024年4月～2025年3月</h3>
+                <h3 class="title">株式会社アウトソーシングテクノロジー 2024年4月～2025年3月</h3>
                 <div class="box">
                     <p>
                         ■業務内容（ヘルプデスク等）
@@ -125,7 +125,7 @@
         </li>
         <li>
             <section>
-                <h3 class="title">派遣先：成和システムエンジニアリング 派遣元：株式会社アウトソーシングテクノロジー 2023年8月～現在</h3>
+                <h3 class="title">株式会社アウトソーシングテクノロジー 2025年4月～現在</h3>
                 <div class="box">
                     <p>
                         金融系伝送システム案件<br>
